--- a/public/stat120/Day1.html
+++ b/public/stat120/Day1.html
@@ -211,18 +211,15 @@ Data is stored and presented in a dataset that comprises of variables measured o
 
 # General sentiment of the class
 
+&lt;img src="Day1_files/figure-html/unnamed-chunk-1-1.svg" width="60%" style="display: block; margin: auto;" /&gt;
 
-&lt;center&gt;
-&lt;img src="images/sentiment.png" width="95%" height="85%"&gt;&lt;br&gt;
-&lt;/center&gt;
 
 ---
 
 ## Survey Responses: What do you hope to gain from taking this course?
 
-&lt;center&gt;
-&lt;img src="images/response_1.png" width="55%" height="45%"&gt;&lt;br&gt;
-&lt;/center&gt;
+
+&lt;img src="Day1_files/figure-html/unnamed-chunk-2-1.svg" width="60%" style="display: block; margin: auto;" /&gt;
 
 
 
@@ -231,10 +228,7 @@ Data is stored and presented in a dataset that comprises of variables measured o
 ## Survey Responses: Is there anything about this course that you are nervous about?
 
 
-&lt;center&gt;
-&lt;img src="images/response_2.png" width="45%" height="45%"&gt;&lt;br&gt;
-&lt;/center&gt;
-
+&lt;img src="Day1_files/figure-html/unnamed-chunk-3-1.svg" width="60%" style="display: block; margin: auto;" /&gt;
 
 
 
@@ -1476,7 +1470,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_d67f6829" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_d014996e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
