--- a/public/stat220/Day1.html
+++ b/public/stat220/Day1.html
@@ -194,6 +194,13 @@ class: middle
 
 ---
 
+## Survey Responses: One thing you are excited and nervous about?
+
+&lt;img src="Day1_files/figure-html/unnamed-chunk-1-1.svg" width="60%" style="display: block; margin: auto;" /&gt;
+
+
+---
+
 class: middle
 
 # Class Pipelines
@@ -377,7 +384,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_7b346b4f" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_0e95a5bf" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
