--- a/public/stat220/Day1.html
+++ b/public/stat220/Day1.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- March 26 2023
+ March 27 2023
 
 ---
 
@@ -326,7 +326,7 @@ class: middle
 .pull-left-60[
 .bq.font70[
 - _User:_ A Github account for you (e.g., deepbas).
-- _Organization:_ The Github account for one or more user (e.g., DataScienceFall22).
+- _Organization:_ The Github account for one or more user (e.g., DataScienceSpring23).
 - _Repository:_ A folder within the organization that includes files dedicated to a project.
 - _Local Github:_ Copies of Github files located your computer.
 - _Remote Github:_ Github files located on the https://github.com website.
@@ -384,7 +384,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_8728de68" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_362cf9b3" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
