--- a/public/stat120/Day1.html
+++ b/public/stat120/Day1.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- March 26 2023
+ March 27 2023
 
 ---
 
@@ -192,22 +192,6 @@ Science of collecting, describing, analyzing and making decisions based on data
 
 ---
 
-class: middle
-
-# Data: Cases and Variables
-
-.bql[
-Data are a set of measurements taken on a set of individual units
-- These are .b[cases] or units]
-
-&lt;br&gt;
-
-.bql[
-Data is stored and presented in a dataset that comprises of variables measured on cases
-- A .b[variable] is any characteristic that is recorded for each case
-]
-
----
 
 # General sentiment of the class
 
@@ -237,7 +221,7 @@ Data is stored and presented in a dataset that comprises of variables measured o
 
 class: middle
 
-# Statistical Jargons
+# Statistical Computation
 
 
 &lt;div class="bq" style="height: 3in;"&gt;
@@ -255,7 +239,7 @@ class: middle
 
 class: middle
 
-# Statistical Jargons
+# Statistical Computation
 
 
 &lt;div class="bq" style="height: 3in;"&gt;
@@ -274,7 +258,7 @@ class: middle
 
 class: middle
 
-# Statistical Jargons
+# Statistical Computation
 
 
 &lt;div class="bq" style="height: 3in;"&gt;
@@ -286,6 +270,24 @@ class: middle
 &lt;li&gt;  RMarkdown is platform in Rstudio to write your codes and results &lt;/li&gt;
 
 &lt;/div&gt;
+
+---
+
+
+class: middle
+
+# Data: Cases and Variables
+
+.bql[
+Data are a set of measurements taken on a set of individual units
+- These are .b[cases] or units]
+
+&lt;br&gt;
+
+.bql[
+Data is stored and presented in a dataset that comprises of variables measured on cases
+- A .b[variable] is any characteristic that is recorded for each case
+]
 
 ---
 
@@ -1470,7 +1472,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_d014996e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_f3ae38e6" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
