--- a/static/stat220/Day2.html
+++ b/static/stat220/Day2.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Spring 23]
 
- March 28 2023
+ March 29 2023
 
 ---
 
@@ -95,14 +95,14 @@ class: action, middle
 ]
 .pull-right-60[
 .bq.font90[
-- Let's go over to maize server/ local Rstudio to connect it with the class [Github repository](https://github.com/DataScienceFall22)
+- Let's go over to maize server/ local Rstudio to connect it with the class [Github repository](https://github.com/DataScienceSpring23)
 - Clone hw0-yourusername repository to your course folder as an R project using version control methods
 - Make changes to hw and commit those changes
 - Tip: push the changes regularly back to Github
 ]
 ]
 
-<div class="countdown" id="timer_0e41ff93" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_79be2105" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -729,7 +729,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_2be1dc14" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_49fa67fb" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
