--- a/public/courses/stat120/week1/index.html
+++ b/public/courses/stat120/week1/index.html
@@ -61,7 +61,8 @@
     
   
   <meta name="description" content="Day 1 Slides (pdf/html)
-Day 2 Slides (pdf/html)" />
+Day 2 Slides (pdf/html)
+Day 3 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat120/week1/" />
@@ -306,7 +307,8 @@ Day 2 Slides (pdf/html)" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat120/week1/" />
   <meta property="og:title" content="Week 1 | Deepak Bastola" />
   <meta property="og:description" content="Day 1 Slides (pdf/html)
-Day 2 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 2 Slides (pdf/html)
+Day 3 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -782,11 +784,7 @@ Day 2 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.ne
           <div class="article-style">
             <p>Day 1 Slides (<a href="/stat120/Day1.pdf" target="_blank">pdf</a>/<a href="/stat120/Day1.html" target="_blank">html</a>)</p>
 <p>Day 2 Slides (<a href="/stat120/Day2.pdf" target="_blank">pdf</a>/<a href="/stat120/Day2.html" target="_blank">html</a>)</p>
-<!--
-
-Day 3 Slides (<a href="/stat120/lecture_notes/Day3.pdf" target="_blank">pdf</a>/<a href="/stat120/lecture_notes/Day3.html" target="_blank">html</a>)
-
--->
+<p>Day 3 Slides (<a href="/stat120/lecture_notes/Day3.pdf" target="_blank">pdf</a>/<a href="/stat120/lecture_notes/Day3.html" target="_blank">html</a>)</p>
 
           </div>
 
