--- a/public/courses/stat120/week1/index.html
+++ b/public/courses/stat120/week1/index.html
@@ -784,7 +784,7 @@ Day 3 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.ne
           <div class="article-style">
             <p>Day 1 Slides (<a href="/stat120/Day1.pdf" target="_blank">pdf</a>/<a href="/stat120/Day1.html" target="_blank">html</a>)</p>
 <p>Day 2 Slides (<a href="/stat120/Day2.pdf" target="_blank">pdf</a>/<a href="/stat120/Day2.html" target="_blank">html</a>)</p>
-<p>Day 3 Slides (<a href="/stat120/lecture_notes/Day3.pdf" target="_blank">pdf</a>/<a href="/stat120/lecture_notes/Day3.html" target="_blank">html</a>)</p>
+<p>Day 3 Slides (<a href="/stat120/Day3.pdf" target="_blank">pdf</a>/<a href="/stat120/Day3.html" target="_blank">html</a>)</p>
 
           </div>
 
