--- a/public/stat120/Day5.html
+++ b/public/stat120/Day5.html
@@ -52,13 +52,13 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- April 04 2023
+ April 05 2023
 
 ---
 
 # Student Survey
 
-.hljs[]
+.hljs[Dataset on 362 responses to a student survey given at one college]
 
 .font80[
 
@@ -609,7 +609,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_58c22934" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_d7129e3c" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
